--- a/locators/dashboardloc.properties
+++ b/locators/dashboardloc.properties
@@ -4,6 +4,6 @@
 loc.txt.listOfItem=Xpath://*[@class='media-box-heading ng-binding']
 loc.tab.dashboard=Xpath://*[@class='ng-scope md-ink-ripple']
 loc.icon.refresh=Css:.icon-refresh
-loc.logo.homepage=Css:.img-responsive
+loc.logo.homepage=Css:.brand-logo
 loc.filter.pass=Model:rctrl.reportsTableParams.filter().status
    
